docs: add documentation for deletate handler
